templates: Fix rendering of post hook init hack when CNI is disabled.

--- a/helm/linkerd2-app/templates/proxy-injector.yaml
+++ b/helm/linkerd2-app/templates/proxy-injector.yaml
@@ -112,8 +112,8 @@ spec:
       {{ if not .Values.cniEnabled -}}
       initContainers:
       - {{- include "partials.proxy-init" $tree | indent 8 | trimPrefix (repeat 7 " ") }}
-      {{- if .Values.postHookInitHack.enabled -}}
-      - {{- include "post-hook-init-hack.container" . }}
+      {{- if .Values.postHookInitHack.enabled }}
+      - {{- include "post-hook-init-hack.container" . | indent 8 | trimPrefix (repeat 7 " ") }}
       {{- end }}
       {{- else if .Values.postHookInitHack.enabled }}
       initContainers:
